Fixed home grid spacing

--- a/client/src/styles/HomeGrid.css
+++ b/client/src/styles/HomeGrid.css
@@ -26,7 +26,8 @@
   flex: 2;
   max-height: 560px;
   max-width: 560px;
-  padding: 0px 5px 0px 0px;
+  /* padding: 0px 5px 0px 0px; */
+  margin-right: 5px;
 }
 
 .photo1 {
@@ -35,13 +36,15 @@
   display: block;
   height: 560px;
   width: 560px;
-  padding: 0px 5px 0px 0px;
+  /* padding: 0px 5px 0px 0px; */
 }
 
 .photo23, .photo45 {
   flex: 1;
   width: 100%;
   height: 100%;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .photo2Container, .photo3Container, .photo4Container, .photo5Container {
@@ -54,9 +57,10 @@
   display: block;
   object-fit: cover;
   width: 280px;
-  height: 280px;
-  padding: 0px 5px 5px 5px;
+  height: 275px;
+  /* padding: 0px 5px 5px 5px; */
   position: relative;
+  margin-bottom: 10px;
 }
 
 .photo3 {
@@ -65,8 +69,8 @@
   display: block;
   object-fit: cover;
   width: 280px;
-  height: 280px;
-  padding: 5px 5px 0px 5px;
+  height: 275px;
+  /* padding: 5px 5px 0px 5px; */
   position: relative;
 }
 
@@ -77,10 +81,10 @@
   display: block;
   object-fit: cover;
   width: 280px;
-  height: 280px;
-  padding: 0px 0px 5px 5px;
+  height: 275px;
+  /* padding: 0px 0px 5px 5px; */
   position: relative;
-
+  margin-bottom: 10px;
 }
 
 .photo5 {
@@ -90,10 +94,9 @@
   display: block;
   object-fit: cover;
   width: 280px;
-  height: 280px;
-  padding: 5px 0px 0px 5px;
+  height: 275px;
+  /* padding: 5px 0px 0px 5px; */
   position: relative;
-
 }
 
 .showAll {
@@ -119,4 +122,12 @@
   width: auto;
   top: 90%;
   right: 2%;
+}
+
+img:hover {
+  background-color: black;
+}
+
+img:hover {
+  opacity: 0.8;
 }
